force-app/main/default/objects/FSM_IntegrationCredentials__mdt/FSM_IntegrationCredentials__mdt.object-meta.xml
<CustomObject>
    <description>Created as a part of #SFI-61.</description>
    <label>FSM_IntegrationCredential</label>
    <pluralLabel>FSM_IntegrationCredentials</pluralLabel>
</CustomObject>