force-app/main/default/objects/FSM_IntegrationCredentials__mdt/fields/FSM_ApiKey__c.field-meta.xml
<CustomField>
    <fullName>FSM_ApiKey__c</fullName>
    <description>Created as a part of #SFI-61.</description>
    <inlineHelpText>Used to store the Api Key .</inlineHelpText>
    <label>Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>