force-app/main/default/objects/FSM_IntegrationCredentials__mdt/fields/FSM_ClientId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ClientId__c</fullName>
    <description>Created as a part of #SFI - 61.</description>
    <inlineHelpText>Used to store the Client Id</inlineHelpText>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>