force-app/main/default/objects/FSM_IntegrationCredentials__mdt/fields/FSM_ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>FSM_ClientSecret__c</fullName>
    <description>Create as a part of #SFI-61</description>
    <inlineHelpText>Used to store the client secret token</inlineHelpText>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>