force-app/main/default/objects/FSM_IntegrationCredentials__mdt/fields/FSM_EndpointUrl__c.field-meta.xml
<CustomField>
    <fullName>FSM_EndpointUrl__c</fullName>
    <description>Created as a part of us #SFI-61</description>
    <inlineHelpText>Used to store the the end point.</inlineHelpText>
    <label>Endpoint Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>