force-app/main/default/objects/FSM_IntegrationCredentials__mdt/fields/FSM_Environment__c.field-meta.xml
<CustomField>
    <fullName>FSM_Environment__c</fullName>
    <description>Created as a part of #SFI-61</description>
    <inlineHelpText>Environment Type.</inlineHelpText>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
                <default>true</default>
                <label>Production</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>