force-app/main/default/objects/FSM_IntegrationCredentials__mdt/fields/FSM_TargetSystem__c.field-meta.xml
<CustomField>
    <fullName>FSM_TargetSystem__c</fullName>
    <description>Created as a part of us #SFI-61</description>
    <inlineHelpText>Target System Details.</inlineHelpText>
    <label>Target System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP CPI</fullName>
                <default>true</default>
                <label>SAP CPI</label>
            </value>
            <value>
                <fullName>GIS</fullName>
            </value>
            <value>
                <fullName>ESRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>